# demo-icpdexfans

./: Cargo.toml  dfx.json  package-lock.json  package.json
backend/canisters/notifications/api/: Cargo.toml
backend/canisters/notifications/api/src/queries/: mod.rs  notifications.rs
backend/canisters/notifications/api/src/updates/: mod.rs
backend/canisters/notifications/impl/: Cargo.toml
backend/canisters/proposals/: Cargo.toml  can.did
backend/canisters/proposals/src/: lib.rs
backend/canisters/users/: Cargo.toml  can.did
backend/canisters/users/src/: lib.rs
backend/libraries/types/: Cargo.toml
src/app/: page.tsx
