[package]
name = "notifications_canister_api"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.7.6"
ledger-canister = { git = "https://github.com/dfinity/ic", rev = "e362530172c44679313b1b7fca1e90d8967545d8" }
serde = "1.0.129"
types = { path = "../../../libraries/types" }
